# Learning-C-Language

./: .gitignore  README.md
01_Basic_Grammar/: 00_grammer.md  01_data_type.c  02_scanf.c  03_operator.c  04_while.c  05_for.c  06_if_else.c  07_switch.c  08_function.c  09_array.c  10_pointer.c  11_string.c  12_manage_memory.c  13_struct.c  14_enum.c  15_union.c  16_typedef.c  17_file.c  18_file1.c  19_macro_define.c  README.md
01_Basic_Grammar/20_include/: add.h  build.sh  main.c  sub.c  sub.h
02_Linux_API/: README.md
03_Makefile_cmake_git/: README.md
03_Tool/: README.md
03_Tool/01_Makefile/: README.md  跟我一起写Makefile_陈皓2020重制版.7z
03_Tool/01_Makefile/01_example/: Makefile
03_Tool/01_Makefile/01_example/include/: test.h  test1.h  test2.h
03_Tool/01_Makefile/01_example/src/: main.c  test.c  test1.c
03_Tool/01_Makefile/01_example/src/test/: test2.c
03_Tool/01_Makefile/02_example/include/: sub.h  sub2.h
03_Tool/02_CMake/: README.md
03_Tool/02_CMake/01_example/: CMakeLists.txt  build.sh  main.cpp
03_Tool/02_CMake/01_example/src/: test.cpp  test.h
04_GDB/: README.md
04_Soft_Test/: 软件测试.md
04_Soft_Test/01_Unit_Test/: README.md
04_Soft_Test/01_Unit_Test/01_googletest/: README.md
04_Soft_Test/01_Unit_Test/01_googletest/01_sample/: CMakeLists.txt
04_Soft_Test/01_Unit_Test/01_googletest/05_sample/: CMakeLists.txt
04_Soft_Test/01_Unit_Test/01_googletest/09_sample/: CMakeLists.txt
04_Soft_Test/01_Unit_Test/01_googletest/09_sample/unit_test/: sample9_unittest.cc
04_Soft_Test/01_Unit_Test/01_googletest/10_sample/: main.cc
04_Soft_Test/01_Unit_Test/02_Unity/: README.md
04_Soft_Test/01_Unit_Test/02_Unity/01_example/: CMakeLists.txt  build.sh  main.c
04_Soft_Test/01_Unit_Test/02_Unity/01_example/src/: add.h
04_Soft_Test/01_Unit_Test/02_Unity/01_example/unit_test/: unit_tests.c
04_Soft_Test/01_Unit_Test/02_Unity/02_example_fixture/: CMakeLists.txt
04_Soft_Test/01_Unit_Test/02_Unity/02_example_fixture/src/: add.c  leapyear.c  leapyear.h
04_Soft_Test/01_Unit_Test/02_Unity/02_example_fixture/unit_test/: unit_tests.c
04_Soft_Test/01_Unit_Test/02_google_test_samples/: README.md
05_Project/: README.md
06_Common_Bugs/: README.md
07_Materials/: README.md  华为C_CPP编码规范和实例.rar
07_Materials/01_Book/: C程序设计语言_第2版.7z  C语言程序设计：现代方法_第2版修订版_代码.7z  README.md  代码大全_第二版.7z  你必须知道的495个C语言问题.7z
08_Code_Snippet/: 01_catch_segment_fault_signal.c  02_setjmp_longjmp.c  03_binary_search.c  README.md  test.c
08_Code_Snippet/00_Component/: 01_list.md  README.md
08_Code_Snippet/01_circular_buffer/: CMakeLists.txt  README.md  main.c
08_Code_Snippet/01_circular_buffer/src/: circular_buffer.c  circular_buffer.h  common.h  consumer.c  consumer.h  producer.c  producer.h
08_Code_Snippet/01_circular_buffer/unit_test/: unit_tests.c
08_Code_Snippet/02_tlsf/: CMakeLists.txt  build.sh  main.c
08_Code_Snippet/02_tlsf/unit_test/: unit_tests.c
09_Interview_Questions/: README.md
